test/scc/decl/semantic-errors/084.a
084.t:1:12: error: 'extern' variable has an initializer